--- a/package.json
+++ b/package.json
@@ -86,9 +86,12 @@
     "@angular/router": "~4.4.4",
     "@angularclass/hmr": "~2.1.3",
     "@angularclass/hmr-loader": "^3.0.4",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^4.1.0",
     "core-js": "^2.4.1",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
+    "recordrtc": "^5.4.5",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.3",
     "zone.js": "~0.8.18"
